UtahLiveDataTest/src/objects/ApplicationContact__c.object
<CustomObject>
    <description>[Business]  Junction object to save all the contact records of the Applications</description>
    <fields>
        <fullName>ApplicationDetail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application Detail</label>
        <referenceTo>Form__c</referenceTo>
        <relationshipLabel>Application Contacts</relationshipLabel>
        <relationshipName>Application_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Application__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>Application__c</referenceTo>
        <relationshipLabel>Application Contacts</relationshipLabel>
        <relationshipName>Application_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Application Contacts</relationshipLabel>
        <relationshipName>Application_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>PreApplication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Pre-Application</label>
        <referenceTo>PreApplication__c</referenceTo>
        <relationshipLabel>Application Contacts</relationshipLabel>
        <relationshipName>Application_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Application Contact</label>
    <nameField>
        <displayFormat>AC-{00000}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Contacts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>